[package]
name = "hydrasect"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "hydrascrape"
path = "src/hydrascrape.rs"

[dependencies]
anyhow = "1.0.96"
indicatif = "0.17.11"
log = "0.4.26"
reqwest = { version = "0.12.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde_json = "1.0.139"
simple_logger = { version = "5.0.0", features = ["colored"] }
tempfile = "3.17.1"
